2004-07-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Parser/Resolver.cs: When locating the inner or outer classes, get the 
	  class from the parser service, since it has all type names resolved 
	  (the one got from the compilation unit does not).

2004-07-05  Todd Berman  <tberman@off.net>

	* CSharpBindingExecutionManager.cs: removed.
	* CSharpBindingExecutionManager.cs.in: Added
	* Makefile.am: modified.
	This patch is from Marcin Krzyzanowski <krzak@pld-linux.org> and it
	fixes mint issues.

2004-07-04  John Luke  <jluke@cfl.rr.com>

	* Gui/OutputOptionsPanel.cs: use MessageService, remove ResourceService

2004-07-01  Todd Berman  <tberman@off.net>

	* Parser/Resolver.cs: fix up CtrlSpace resolving to add this. members
	to the completion window. We need to figure out what is causing the
	public class MyWindow : Window not working but the public class
	MyWindow : Gtk.Window still works and this stuff will look good.
	* Gui/OutputOptionsPanel.cs: remove dup'd namespace.

2004-06-22  John Luke <jluke@cfl.rr.com>

	* CSharpBindingCompilerManager.cs: be explicit when copying the
	assembly to avoid silent failures (use build/bin/. not build/bin)

2004-06-17  John Luke  <jluke@cfl.rr.com>

	* Gui/OutputOptionsPanel.cs: Use MonoDevelop.Gui.Widgets.FileSelector
	instead of Gtk.FileSelection

2004-05-30  Lluis Sanchez Gual  <lluis@ximian.com>

	* Parser/Resolver.cs: Resolve base classes using a deep search in all
	  project references. In SearchType, fixed namespace lookup so it works
	  for inner classes as well.

2004-05-27  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: fix up projects with space in
	their name.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: more makefile magic.

2004-05-25  Todd Berman  <tberman@sevenl.net>

	* Parser/Parser.cs: Update MonodocResolver and IsAsResolver.
	* Parser/Resolver.cs: Update MonodocResolver and IsAsResolver

2004-05-25  Lluis Sanchez Gual  <lluis@ximian.com>
